# ece650

./: README.md
a1/: a1ece650.py
a2/: CMakeLists.txt  ece650-a2.cpp  user.yml
a3/: CMakeLists.txt  ece650-a1.py  ece650-a2.cpp  ece650-a3.cpp  rgen.cpp  user.yml
a4/: CMakeLists.txt  README.md  ece650-a4.cpp
project/: CMakeLists.txt  README.md  ece650-prj.cpp  user.yml
